# s21_SmartCalc_v2.0

./: README.md
src/: CMakeLists.txt  Makefile  documentation.md
src/Controller/: s21_controller.cc  s21_controller.h
src/Model/: s21_calculator.cc  s21_calculator.h  s21_checker.cc  s21_checker.h  s21_finance.cc  s21_finance.h
src/Tests/: CMakeLists.txt  s21_calculator_test.cc  s21_checker_test.cc  s21_finance_test.cc
src/View/: main.cc
src/View/FinanceWindow/: s21_financewindow.cc  s21_financewindow.h  s21_financewindow.ui
src/View/MainWindow/: s21_mainwindow.cc  s21_mainwindow.h  s21_mainwindow.ui
